# qplugin_and_memory_leak_detection

./: CMakeLists.txt
common/: debugNew.h  plugin.cpp  plugin.h  pluginCreator.h
lib/: CMakeLists.txt  someSpecialPlugin.cpp  someSpecialPlugin.h  someSpecialPluginCreator.cpp  someSpecialPluginCreator.h
src/: CMakeLists.txt  main.cpp  pluginLoader.cpp  pluginLoader.h
